Fixed mobile logo spacing.

--- a/styles/main.css
+++ b/styles/main.css
@@ -526,7 +526,7 @@ p .bold {
 }
 
 #vitechlogo {
-	flex: 0 1 60%;
+	flex: 0 1 64%;
 }
 
 #ntlogo {
